@startuml
title Jerarquía de Entidades

class Entity {
  - next_attack_tick: uint32_t
  - hp_current: uint32_t
  - hp_max: uint32_t
  - name: string
  - pos: Position
  - dir: Direction
  - level: uint8_t
  - current_map: string
  - sprite_id: uint16_t
  - speed: uint32_t
  + {virtual} take_damage(damage: uint32_t)
  + is_dead(): bool
  + try_attack(current_tick: uint32_t, cooldown_ticks: uint32_t): bool
  + kill()
  + get_dir(): Direction
  + set_dir(d: Direction)
  + get_sprite_id(): uint16_t
  + get_speed(): uint32_t
  + get_current_map(): const string&
  + set_current_map(map: const string&)
}

class Player {
  - id: uint16_t
  - race: Race
  - player_class: PlayerClass
  - experience: uint32_t
  - gold: uint32_t
  - mana_current: uint32_t
  - mana_max: uint32_t
  - strength: uint32_t
  - agility: uint32_t
  - inv: PlayerInventory
  - bank_inv: Inventory
  - bank_gold: uint32_t
  - clan_name: string
  + level_up()
  + gain_experience(exp: uint32_t)
  + equip(inv_slot_index: uint8_t, catalog: ItemCatalog): bool
  + unequip(eslot: EquipSlot)
  + heal(amount: uint32_t)
  + restore_mana(amount: uint32_t)
}

class EnemyNpc {
  - damage: uint32_t
  - rng: Rng&
  - catalog: const ItemCatalog&
  - idle_move_timer: uint32_t
  - idle_move_dir: Direction
  + get_kill_reward(drop_config: NpcDropConfig, balance: BalanceConfig): EnemyDrop
  + get_damage(): uint32_t
  + get_idle_move_timer(): uint32_t
  + set_idle_move_timer(new_timer: uint32_t)
  + get_idle_move_dir(): Direction
  + set_idle_move_dir(new_dir: Direction)
}

class PlayerInventory {
  + equip: Inventory
  + hp_potions: Inventory
  + mana_potions: Inventory
  + slot_count(): uint8_t
  + at(index: uint8_t): InventorySlot&
  + place(type: ItemType, name: string): bool
  + place_at(index: uint8_t, type: ItemType, name: string): bool
  + clear(index: uint8_t)
  + is_full(): bool
}

class Inventory {
  - slots: vector<InventorySlot>
  + place(type: ItemType, name: string): bool
  + place_at(index: uint8_t, type: ItemType, name: string): bool
  + at(index: uint8_t): InventorySlot&
  + clear(index: uint8_t)
  + swap(a: uint8_t, b: uint8_t)
  + first_free_slot(): uint8_t
  + is_full(): bool
}

class PlayerRegistry {
  - players: map<uint16_t, Player>&
  + ids_on_map(map_name): vector<uint16_t>
}
note bottom of PlayerRegistry
  Wrapper de consulta efímero sobre el
  map<uint16_t, Player> de Game. No es
  dueño de los Player ni un miembro de
  Game: se construye on-the-fly como
  PlayerRegistry(players).
end note

class Game {
  - players: map<uint16_t, Player>
  - enemy_npcs: map<uint16_t, EnemyNpc>
  - maps: unordered_map<string, Map>
  - rng: Rng
  - combat_controller: CombatController
  - clan_manager: ClanManager
  + process_command(id: uint16_t, cmd: ClientCommand): CommandResult
  + tick(): CommandResult
}
note bottom of Game
  Además compone 12 servicios
  especializados (BankService,
  SpawnService, SpellService, ...).
  Ver game_services.puml.
end note

class CombatController {
  + melee_attack(attacker_id: uint16_t, target_id: uint16_t, current_tick: uint32_t): CommandResult
  + update_npc_ai(current_tick: uint32_t): CommandResult
  + spell_attack_player(attacker_id: uint16_t, target_id: uint16_t, current_tick: uint32_t): CommandResult
  + spell_attack_npc(attacker_id: uint16_t, npc_target_id: uint16_t, current_tick: uint32_t): CommandResult
  - chase_target(npc_id: uint16_t, npc: EnemyNpc&, target: Player&, ...): bool
  - move_random(npc: EnemyNpc&, map: Map*, ...)
  - try_move_npc(npc: EnemyNpc&, npc_id: uint16_t, map: Map*, ..., dir: Direction): bool
  - npc_attack_target(npc_id: uint16_t, npc: EnemyNpc&, target: Player&, current_tick: uint32_t, ...)
  - ... (~20 privados más: get_nearest_player, calculate_damage, etc.)
}

class ClanManager {
  + create_clan(founder, name): ClanResult
  + request_join(applicant, clan): ClanResult
  + accept_member(founder, target): ClanResult
  + kick_member(founder, target): ClanResult
}

Entity <|-- Player
Entity <|-- EnemyNpc
Player *-- PlayerInventory
PlayerInventory *-- Inventory
Game "1" o-- "*" Player : players
Game "1" o-- "*" EnemyNpc : enemy_npcs
Game "1" *-- "1" CombatController
Game "1" *-- "1" ClanManager
Game ..> PlayerRegistry : <<envuelve players>>
CombatController ..> EnemyNpc : opera (por referencia)
@enduml